--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mgrs": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-ios-pwa-prompt": "^2.0.6",
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
@@ -40,6 +41,8 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
