--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
+    "types": [
+      "vite/client",
+      "vite-plugin-pwa/client"
+    ],
     "paths": {
       "@/*": [
         "./src/*"
