--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,32 @@
 {
   "rewrites": [
-    { "source": "/api/map", "destination": "https://srncatabrnensko.cz/map" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/map",
+      "destination": "https://srncatabrnensko.cz/map"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/manifest.webmanifest",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
   ]
 }
